--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "tiny",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "tiny",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon --inspect -r esm -r dotenv/config index.js"
+    "start": "nodemon --inspect -r esm -r dotenv/config server.js"
   },
   "repository": {
     "type": "git",
