--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cookie-parser": "^1.4.5",
+    "envalid": "^6.0.1",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "morgan": "^1.10.0"
